k8s/kustomize/overlays/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: petclinic
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
---
apiVersion: v1
kind: Namespace
metadata:
  name: argocd
